[FRONT-END] Community layouts in progress

--- a/flice-clients/web/src/features/_features.sass
+++ b/flice-clients/web/src/features/_features.sass
@@ -4,3 +4,4 @@
 // Features
 // =============================================
 @import "login/styles/login-view"
+@import "community/styles/self-view"
