--- a/flice-clients/web/src/features/community/views/community.html
+++ b/flice-clients/web/src/features/community/views/community.html
@@ -1,5 +1,14 @@
 <header>
-  Header
-    <button ui-sref="community.create">Go create</button>
+
+ <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Community </a>
+    </div>
+  </div>
+</nav>
+
+<button ui-sref="community.create">Go create</button>
+<button ui-sref="community.self">Go self</button>
 </header>
 <div ui-view=""></div>
