--- a/flice-clients/web/src/features/community/views/self/members.html
+++ b/flice-clients/web/src/features/community/views/self/members.html
@@ -1,3 +1,21 @@
-<div class="col-md-3 box">
-	<h3>Members</h3>
+<div id="community-members-container" class="col-md-3 box row">
+	<h6>Members</h6>
+
+
+	<ul class="list-members no-padding">
+		<li class="member-item">
+			<img class="member-photo" src="http://fc08.deviantart.net/fs71/i/2011/075/d/6/deathstroke___portrait_series_by_thuddleston-d3btaqc.jpg" alt="">
+			<span>
+				Lucas Martins
+			</span>
+
+		</li>
+		<li>
+			<img class="member-photo" src="http://fc08.deviantart.net/fs71/i/2011/075/d/6/deathstroke___portrait_series_by_thuddleston-d3btaqc.jpg" alt="">
+			<span title="Lucas Martins">
+				Lucas Martins
+			</span>
+
+		</li>
+	</ul>
 </div>
