--- a/flice-clients/web/src/features/community/styles/self-view.sass
+++ b/flice-clients/web/src/features/community/styles/self-view.sass
@@ -1,6 +1,6 @@
 
 .box
-	background-color: #DFFFE8
+	background-color: #DEF3F0
 	border-radius: 5px 5px 0 0
 
 #community-menu-container
@@ -21,3 +21,15 @@
 			display: block
 			font-weight: 400
 			margin-top: -10px
+
+#community-members-container
+
+	.list-members
+		list-style: none
+
+		.member-item
+			margin-bottom: 2px
+
+		.member-photo
+			height : 35px
+			width  : 35px
