--- a/flice-clients/web/src/features/login/views/login.html
+++ b/flice-clients/web/src/features/login/views/login.html
@@ -8,13 +8,13 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-12 myo-font-size-33 myo-font-raleway text-center text-white">
-        <span>ngFeatures</span>
+        <span>Project Trail</span>
       </div>
     </div>
 
     <div class="row">
       <div class="col-xs-12 col-md-12 myo-font-size-33 myo-font-lightitalic text-center text-white">
-        <span> It's gonna be legen...   wait for...   daaary!</span>
+        <span> It's gonna be legen...   wait for... </span>
       </div>
     </div>
 
@@ -49,44 +49,24 @@
             <div class="panel-body">
               <div class="row">
                 <div id="user-name-container" class="col-xs-12 no-padding">
-                  <input type="text"
-                    id         = "user-name"
+                  <input type="email"
+                    id         = "user-email"
                     placeholder= "Nome"
-                    ng-model   = "user.firstName"
-                    name       = "user-name"
+                    ng-model   = "user.username"
+                    name       = "user-email"
                     class      = "form-control myo-input text-center"
                     ng-class="{
-                      'has-error' : loginForm['user-name'].$invalid && !loginForm['user-name'].$pristine,
-                      'filled'    : user.firstName.length > 0
-                    }"
-                    required>
-                  <p
-                    ng-class="{'help-block': true, 'help-error': true}"
-                    ng-show="loginForm['user-name'].$error.required && !loginForm['user-name'].$pristine">
-                    Campo obrigatório
-                  </p>
-                </div>
-              </div>
-
-              <div class="row margin-top-default">
-                <div class="col-xs-12 no-padding">
-                  <input type="email"
-                    id          = "user-email"
-                    placeholder = "E-mail"
-                    name        = "user-email"
-                    ng-model    = "user.email"
-                    class       = "form-control myo-input text-center"
-                    ng-class    = "{
                       'has-error' : loginForm['user-email'].$invalid && !loginForm['user-email'].$pristine,
-                      'filled'    : user.email.length > 0
+                      'filled'    : user.username.length > 0
                     }"
-                    required>
+                    required
+                    >
                   <p
                     ng-class="{'help-block': true, 'help-error': true}"
                     ng-show="loginForm['user-email'].$error.required && !loginForm['user-email'].$pristine">
                     Campo obrigatório
                   </p>
-                  <p
+                   <p
                     ng-class="{'help-block': true, 'help-error': true}"
                     ng-show="loginForm['user-email'].$error.email && !loginForm['user-email'].$pristine">
                     Digite um e-mail válido
@@ -95,9 +75,31 @@
               </div>
 
               <div class="row margin-top-default">
+                <div class="col-xs-12 no-padding">
+                  <input type="password"
+                    id          = "user-password"
+                    placeholder = "E-mail"
+                    name        = "user-password"
+                    ng-model    = "user.password"
+                    class       = "form-control myo-input text-center"
+                    ng-class    = "{
+                      'has-error' : loginForm['user-password'].$invalid && !loginForm['user-password'].$pristine,
+                      'filled'    : user.password.length > 0
+                    }"
+                    required
+                    >
+                  <p
+                    ng-class="{'help-block': true, 'help-error': true}"
+                    ng-show="loginForm['user-password'].$error.required && !loginForm['user-email'].$pristine">
+                    Campo obrigatório
+                  </p>
+
+                </div>
+              </div>
+
+              <div class="row margin-top-default">
                 <div class="col-xs-12 no-padding text-center"  >
-                  <button type="submit" class="btn btn-warning form-control" ng-disabled="loginForm.$invalid"
-                    ng-submit="doLogin()">
+                  <button type="submit" class="btn btn-warning form-control" ng-disabled="loginForm.$invalid">
                     <span class="myo-font-lightitalic">Login</span>
                   </button>
                 </div>
