[FRONT-END] Login in progress

--- a/flice-clients/web/src/features/community/styles/self-view.sass
+++ b/flice-clients/web/src/features/community/styles/self-view.sass
@@ -1,7 +1,7 @@
 
 .box
-	background-color: #DEF3F0
-	border-radius: 5px 5px 0 0
+	background-color: #FFF
+	opacity: 1.0
 
 #community-menu-container
 
@@ -21,6 +21,14 @@
 			display: block
 			font-weight: 400
 			margin-top: -10px
+
+#community-description-menu
+
+	.com-description
+		margin-bottom: 10px
+
+	.com-description-content
+		text-align: justify
 
 #community-members-container
 
