--- a/flice-clients/web/src/features/community/views/self/description.html
+++ b/flice-clients/web/src/features/community/views/self/description.html
@@ -1,12 +1,17 @@
-<div class="col-md-7">
+<div id="community-description-menu" class="col-md-7">
 
-	<div class="col-md-12 box row">
-		<h4>Description: </h4>
-		<div class="col-md-12">Description: </div>
+	<div class="col-md-12 box row com-description">
+		<h4>Java </h4>
+		<div class="col-md-12">
+			<p class="com-description-content">
+				<b>Description:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet volutpat turpis. Curabitur blandit vel ipsum sit amet fermentum. Duis auctor auctor magna nec porta. Aliquam pharetra condimentum lectus malesuada faucibus. Fusce porta dolor vitae sem laoreet cursus. Etiam in malesuada urna. Maecenas arcu magna, mollis nec est eu, molestie vulputate velit. Donec commodo, eros a efficitur efficitur, justo eros fermentum sapien, quis elementum augue nulla placerat erat. Praesent et congue felis. Nulla faucibus felis id maximus imperdiet. Aliquam erat volutpat.
+
+			</p>
+
+		</div>
 	</div>
 
 	<div class="col-md-12 box">
-		<h5>Topics</h5>
 		<table class="table">
 			<tr>
 				<th>Topic</th>
@@ -19,7 +24,7 @@
 				<td>29/09/2015 10:00</td>
 			</tr>
 			<tr>
-				<td>[OFICIAl] Coffe vs JS</td>
+				<td>[OFICIAl] Java vs Outras/td>
 				<td>102</td>
 				<td>29/09/2015 13:00</td>
 			</tr>
