--- a/flice-clients/web/src/features/community/views/self/menu.html
+++ b/flice-clients/web/src/features/community/views/self/menu.html
@@ -2,12 +2,12 @@
 <div id="community-menu-container" class="col-md-2 box no-padding row">
 
 	<div  class="col-md-12">
-		<img class="com-photo" src="https://lh3.googleusercontent.com/-SerDXs6D6_U/VOkxvE9tldI/AAAAAAAAFsM/oZPDVUaJOzA/w506-h750/JavaScript-logo.png" alt="">
+		<img class="com-photo" src="http://www.sssit.org/images/java-training.jpg" alt="">
 	</div>
 
 	<div class="col-md-12 community-general-info">
 		<label class="com-name">
-			Javascript
+			Java
 		</label>
 		<label class="com-members">(5.125 members)</label>
 	</div>
