--- a/flice-clients/web/src/main/styles/general/global/global.sass
+++ b/flice-clients/web/src/main/styles/general/global/global.sass
@@ -5,12 +5,12 @@
 html, body, #app-container, .app-view, .screen-content
   height    : 100%
   min-width : $applicationContentWidth
-  overflow  : auto 
+  overflow  : auto
   scrollbar-track-color: #FFFFFF
 
 body
-  background: #FFF
-
+  //background: #FFF
+  background: #3f4b9d
 
 .screen-content
   max-width    : $applicationContentWidth
