[FRONT-END] Create done

--- a/flice-clients/web/src/features/community/views/create.html
+++ b/flice-clients/web/src/features/community/views/create.html
@@ -1,5 +1,5 @@
 <div class="app-view">
-  <div class="screen-content">
+  <div class="screen-content box">
    
     <h3>Create</h3>
 
@@ -13,7 +13,7 @@
     		<input type="text" ng-model="community.description" class="form-control" placeholder="Community description..."></input>
 
     		<label>Imagem: </label>
-    		<input type="text" ng-model="community.imagem" class="form-control" placeholder="Community image... "></input>
+    		<input type="text" ng-model="community.image" class="form-control" placeholder="Community image... "></input>
 
     		<label>Content privacity: </label>
     		<br />
