[BACK-END] Many changes of front

--- a/flice-clients/web/src/features/community/views/self/description.html
+++ b/flice-clients/web/src/features/community/views/self/description.html
@@ -1,11 +1,10 @@
 <div id="community-description-menu" class="col-md-7">
 
 	<div class="col-md-12 box row com-description">
-		<h4>Java </h4>
+		<h4>{{community.name}} </h4>
 		<div class="col-md-12">
 			<p class="com-description-content">
-				<b>Description:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet volutpat turpis. Curabitur blandit vel ipsum sit amet fermentum. Duis auctor auctor magna nec porta. Aliquam pharetra condimentum lectus malesuada faucibus. Fusce porta dolor vitae sem laoreet cursus. Etiam in malesuada urna. Maecenas arcu magna, mollis nec est eu, molestie vulputate velit. Donec commodo, eros a efficitur efficitur, justo eros fermentum sapien, quis elementum augue nulla placerat erat. Praesent et congue felis. Nulla faucibus felis id maximus imperdiet. Aliquam erat volutpat.
-
+				<b>Description:</b> {{community.description}}
 			</p>
 
 		</div>
@@ -18,16 +17,13 @@
 				<th>Posts</th>
 				<th>Last post</th>
 			</tr>
-			<tr>
-				<td>[OFF] Alemanha 7 x 1 Brasil</td>
-				<td>2901</td>
-				<td>29/09/2015 10:00</td>
+
+			<tr ng-repeat="topic in topics">
+				<td>{{topic.name}}</td>
+				<td>{{topic.size}}</td>
+				<td>{{topic.lastChange}}</td>
 			</tr>
-			<tr>
-				<td>[OFICIAl] Java vs Outras/td>
-				<td>102</td>
-				<td>29/09/2015 13:00</td>
-			</tr>
+
 		</table>
 	</div>
 </div>
