--- a/flice-clients/web/src/features/community/views/self/menu.html
+++ b/flice-clients/web/src/features/community/views/self/menu.html
@@ -7,9 +7,9 @@
 
 	<div class="col-md-12 community-general-info">
 		<label class="com-name">
-			Java
+			{{community.name}}
 		</label>
-		<label class="com-members">(5.125 members)</label>
+		<label class="com-members">({{community.size}} members)</label>
 	</div>
 
 	<div class="col-md-12 no-padding">
